2002-01-05  Sergei Barbarash  <sgt@fep.ru>

	* Release 0.1
	* Initial release