@@ -1,1 +1,1 @@
-Sergei Barbarash <sgt@outline.ru>
+Sergei Barbarash <sgt@livejournal.com
