@@ -1,4 +1,4 @@
-$Id: README,v 1.1 2002/01/05 15:31:17 sgt Exp $
+$Id: README,v 1.2 2002/01/06 13:45:08 sgt Exp $
 
 Introduction
 ------------
@@ -43,7 +43,7 @@ Too much.
 
 Authors
 -------
-Sergei Barbarash <sgt@outline.ru>, <sgt@livejournal.com>
+Sergei Barbarash <sgt@livejournal.com>
 
 Thanks
 ------
