@@ -1,9 +1,9 @@
 /*
  * wmlj - a LiveJournal dockapp
  *
- * (c) 2001, Sergei Barbarash <sgt@outline.ru>
+ * (c) 2001,2002 Sergei Barbarash <sgt@livejournal.com>
  *
- * $Id: settings.h,v 1.1 2002/01/05 15:31:18 sgt Exp $
+ * $Id: settings.h,v 1.2 2002/01/06 13:45:08 sgt Exp $
  */
 
 #ifndef WMLJ_SETTINGS_H
