@@ -29,12 +29,12 @@ is fully configurable via built-in settings dialog.
 .BR wmaker "(" 1 "),"
 .BR logjam "(" 1 ")."
 .PP
-.UR http://www.outline.ru/projects/wmlj/
-http://www.outline.ru/projects/wmlj/
+.UR http://wmlj.sourceforge.net/
+http://wmlj.sourceforge.net/
 .UE
 .br
 .UR http://www.livejournal.com/
 http://www.livejournal.com/
 .UE
 .SH AUTHOR
-Sergei Barbarash <sgt@outline.ru>
+Sergei Barbarash <sgt@livejournal.com>
